// -----------------------------------------------
// phantom-lang
// https://github.com/notcl4y14/phantom-lang
// -----------------------------------------------

// -----------------------------------------------
// UNDER DEVELOPMENT VERSIONS
// -----------------------------------------------

// 8/1/2024
- Created Parser.js
----
- Now the language reads and interprets files
- Added "--lexer" argument
- Created "tests" folder
    + x_plus_y.pht
    + threading.pht
    + test.pht
- Fixed lexer skipping a character after lexerizing identifier

// 7/1/2024
- Added tokens
    + Number
    + String
    + Identifier
    + Keyword
    + Literal
    + Paren
    + Bracket
    + Brace

// 6/1/2024
- Created Lexer.js
- Added tokens
	+ Operator
	+ Dot
	+ Comma
	+ Colon
	+ Semicolon
	+ Not
	+ Ampersand
	+ Pipe

// 3/1/2024
- Created Token.js
- Created utils folder
	+ tools.js

// 20/12/2023
- Initial release
- Created main.js